# landscape_opt_old

./: .gitignore  CMakeLists.txt  FindLEMON.cmake  Makefile  README.md  bug.index  bug.links  bug.patchs  bug.problem  conanfile.txt  debug.mps  log  log copy  marseille_links.csv  marseille_patchs.csv  old_Makefile  pl_eca_3.lp  quebec-(245589.000000,5039608.000000).eps  quebec-(266530.000000,5066209.000000).eps  quebec-(280484.000000,5088874.000000).eps  quebec-(288043.000000,4997529.000000).eps  quebec-(288785.000000,5093720.000000).eps  quebec-(292450.000000,4995295.000000).eps  quebec-(314662.000000,5085506.000000).eps  quebec-(320742.000000,5088821.000000).eps  quebec-(325700.000000,5081535.000000).eps  quebec-(325735.000000,5061838.000000).eps  quebec-(329469.000000,5088630.000000).eps  quebec-(334842.000000,5067785.000000).eps  quebec-(339240.000000,5064887.000000).eps  quebec-(340229.000000,5018569.000000).eps  quebec-(340336.000000,5035286.000000).eps  quebec-(343861.000000,5072740.000000).eps  quebec-(344827.000000,5033147.000000).eps  quebec-(367218.000000,5053023.000000).eps  quebec-(367830.000000,5099936.000000).eps  quebec-(370401.000000,5062729.000000).eps  quebec-(375397.000000,5081709.000000).eps  quebec-(380154.000000,5051466.000000).eps  quebec-50-0.txt  (+6 more)
cache/: nominatim-090be3f54cd0f162a77bddc433046b64f0b14a71  nominatim-45087614a913d81becb706e8469c1cd56b027e7f  nominatim-c70534aa18173b860a10a50a47b139c4a581cbf6  overpass-0abe0b2d9150440966df485c16f2ad26bb5a5ab2  overpass-282939abd96e8a548ad038f85c7128fb75e3fd98  overpass-55f0b8bb75776876c2bb2887ee6f9ab4b6dcd894  overpass-5e913cbd814c5c8f7f50237bebe48f89b521e1a4  overpass-660c9353763fb1aa731c4da0604b8844979f0ea7  overpass-9d268c97a9e54c688d6f18cfbce7f572f14666b6
data/: notes  regexps.txt  tmp.py
data/Aude/: aude.index  aude.links  aude.patches  aude.problem
data/Data_KeoniSaintPe/: PairwiseDistAudeWild.txt  PairwiseDistOneWild.txt  PairwiseDistSeugeWild.txt  PairwiseMigGenetIsoAude.txt  PairwiseMigGenetIsoOne.csv  PairwiseMigGenetIsoSeuge.txt  PairwiseObstaclesAudeWild.txt  PairwiseObstaclesOneWild.txt  PairwiseObstaclesSeugeWild.txt  RECAP_Peches_Keoni.xlsx
data/Marseille/: links_marseille.links  marseille.index  patchs_marseille.patches  vertices_marseilleb.txt  vertices_marseillec.csv  vertices_marseillec.txt
data/Marseille2/: marseille2.index  patches_marseille2.patches
data/Marseille_analysis/: links_marseille2.links  marseille2.index  patches_marseille2.patches
data/OSM/: _test.py  json_to_landscape.py  osm_query.py  requete  test.py
data/cecile/: test.index  test.links  test.patches
data/contraction_data/: plot.py  plot_copy.py  size.csv  size_100.csv  size_1000.csv  size_200.csv  size_500.csv  time copy.csv  time.csv
data/graphe_yann/: graphe_yann.index  test.problem
data/marseille_analysis_100/: marseille_analysis.index  marseille_analysis.links  marseille_analysis.patchs
data/quebec_leam_v3/: aretes_leam_v3.links  graph_leam_v3.index  problem_leam_v3.problem  quebec.index  quebec.links  quebec.patches  quebec.problem  sommets_leam_v3.patches
data/scripts/: alpha_analysis.py  budget_analysis.py  decrease_links_id.py  marseille2_alpha_analysis.csv  marseille2_thresold_analysis.csv  random_walk.py
data/test/: links.csv  patches.csv  test.index
doc/: Doxyfile  index.html
docs/: Doxyfile  INSTALL.md
docs/html/: abstract__landscape_8hpp.html  abstract__landscape_8hpp__dep__incl.map  abstract__landscape_8hpp__dep__incl.md5  abstract__landscape_8hpp__incl.map  abstract__landscape_8hpp__incl.md5  abstract__landscape_8hpp_source.html  annotated.html  bogo_8cpp.html  bogo_8cpp__incl.map  bogo_8cpp__incl.md5  bogo_8hpp.html  bogo_8hpp__dep__incl.map  bogo_8hpp__dep__incl.md5  bogo_8hpp__incl.map  bogo_8hpp__incl.md5  bogo_8hpp_source.html  chrono_8hpp.html  chrono_8hpp__dep__incl.map  chrono_8hpp__dep__incl.md5  chrono_8hpp__incl.map  chrono_8hpp__incl.md5  chrono_8hpp_source.html  class_chrono-members.html  class_chrono.html  class_contraction_precomputation-members.html  class_contraction_precomputation.html  class_contraction_precomputation__inherit__graph.map  class_contraction_result-members.html  (+726 more)
exec/: aude_analysis.cpp  biorevaix_analysis.cpp  biorevaix_test copy.cpp  biorevaix_test.cpp  boost_graph_test.cpp  calcul_eca.cpp  contracted_benefits.cpp  ctre_test.cpp  eca_contribution_analysis.cpp  eval_eca.cpp  marseille_analysis.cpp  quebec_analysis.cpp  random_chooser_test.cpp  solve.cpp  solve2.cpp  test copy 2.cpp  test copy.cpp  test.cpp  troncons_deltas.csv  ttest.cpp  worst_case_analysis.cpp
include/: bpo_utils.hpp  helper.hpp  instances_helper.hpp  osi_builder.hpp  pl_max_independent.hpp  planar_map.hpp  print_helper.hpp  random_chooser.hpp  random_chooser_2.hpp  random_landscape_genereator.hpp
instances/: quebec-1000-0.problem  quebec-1000-1.problem  quebec-1000-2.problem  quebec-1000-3.problem  quebec-1000-4.problem  quebec-250-0.problem  quebec-250-1.problem  quebec-250-2.problem  quebec-250-3.problem  quebec-250-4.problem  quebec-50-0.problem  quebec-50-1.problem  quebec-50-2.problem  quebec-50-3.problem  quebec-50-4.problem  quebec-500-0.problem  quebec-500-1.problem  quebec-500-2.problem  quebec-500-3.problem  quebec-500-4.problem  test  test.links  test.patchs  test.problem
output/: analysis_landscape.index  analysis_landscape.links  analysis_landscape.patchs  analysis_plan.problem  contracted  original  quebec  quebec-250-0  quebec-50-0  quebec-50-1  quebec-50-2  quebec-50-3  quebec-50-4  quebec-500-0  test
src/: contracted_benefits.cpp  contracted_benefits.cpp.todo  contraction_test copy 2.cpp  contraction_test copy.cpp  contraction_test.cpp  convert_multiplicative.cpp  eca_analysis.cpp  eca_analysis.cpp.todo  generate_instance.cpp  generate_marseille.cpp  helper.cpp  osi_builder.cpp  pl_max_independent.cpp  pl_reff.cpp  pl_reff.cpp.todo  pl_test.cpp  pl_test.cpp.todo  print_helper.cpp  random_chooser_test.cpp  solve.cpp  solver_analysis copy.cpp  solver_analysis.cpp  test copy 2.cpp  test.cpp
test/: contraction_test.cpp  instance.json  test.cpp
(+642 files in other folders)
